# openslide-cloud

./: CLOUD.md  meson.build  meson_options.txt
.github/workflows/: c.yaml
src/: meson.build  openslide-decode-dicom.c  openslide-decode-jpeg.c  openslide-decode-tifflike.c  openslide-file.c  openslide-hash.c  openslide-private.h  openslide-storage-azure.c  openslide-storage-cloud.c  openslide-storage-gcs.c  openslide-storage-internal.h  openslide-storage-local.c  openslide-storage-s3.c  openslide-storage.c  openslide-vendor-dicom.c  openslide-vendor-hamamatsu.c  openslide-vendor-mirax.c  openslide-vendor-zeiss.c  openslide.c  openslide.h
test/: driver.py  meson.build  requirements.txt  storage-primitives.c  try_open.c
test/cases/mirax-index-nonhier-associated-bad-offset/: config.yaml
