option(
  'version_suffix',
  type : 'string',
  description : 'Suffix to append to the package version string',
)
option(
  'test',
  type : 'feature',
  yield : true,
  description : 'Build tests',
)
option(
  'doc',
  type : 'feature',
  yield : true,
  description : 'Enable building documentation (requires Doxygen)',
)
option(
  's3',
  type : 'feature',
  value : 'auto',
  description : 'Enable AWS S3 storage provider support',
)
option(
  'gcs',
  type : 'feature',
  value : 'auto',
  description : 'Enable Google Cloud Storage provider support',
)
option(
  'azure',
  type : 'feature',
  value : 'auto',
  description : 'Enable Azure Blob Storage provider support',
)
option(
  '_export_internal_symbols',
  type : 'boolean',
  value : false,
  description : 'For test suite; do not use',
)
option(
  '_gcov',
  type : 'boolean',
  value : false,
  description : 'For test suite; do not use',
)
option(
  '_sanitize',
  type : 'boolean',
  value : false,
  description : 'For test suite; do not use',
)
